Fixed bug #45120 (PDOStatement->execute() returns true then false for same statement).